hard-gists/745868fb26102298e837/run.log
=== Docker Run Log for 745868fb26102298e837 ===
Started at: Mi 29. Okt 17:10:04 CET 2025

[2025-10-29 17:10:04] START: Running container for 745868fb26102298e837
[2025-10-29 17:10:04] SUCCESS: Container 78adc8787a62263bb60c909b2ea455d534a725bc2f35e97deb5334436151cafd started for 745868fb26102298e837
=== Container logs for 745868fb26102298e837 ===
  File "/snippet.py", line 17
    print '%-25s %s' %('SHA1 Fingerprint:',fingerprint)
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 745868fb26102298e837 ===
[2025-10-29 17:10:06] INFO: Container 78adc8787a62263bb60c909b2ea455d534a725bc2f35e97deb5334436151cafd has stopped
